# eval-sdk-dm385

./: Makefile  README.md
bootloader/: Config  Makefile
bootloader/u-boot-2010.06/: Config.template  Makefile
bsp/: .release  .updinfo  Config  arch  mach
bsp/arch-dm385/: Config
bsp/arch-dm385/u-boot/: Makefile.rules
bsp/classes/: cmake.defs  common.defs  dvsdk.defs  ezsdk.defs  yocto.defs
bsp/mach-dm385-fossilshale/: Config  Make.conf  bspconfig
bsp/mach-dm385-fossilshale/openfd/: Make.defs  Makefile.sd
bsp/mach-dm385-fossilshale/u-boot/: Config  Makefile.rules
bsp/oscheck/: host.required  local.tools.common  ubuntu.common
bsp/scripts/: fetcher.sh
fs/: Makefile
fs/apps/DirectFB-1.7.1/: Makefile
fs/apps/bash-4.3/: Config  Makefile  copyrights.xml
fs/apps/boost-1.52.0/: Makefile
fs/apps/busybox/: Makefile
fs/apps/flup-1.0.2/: Makefile
fs/apps/gst-plugins-good-0.10.31/: metainfo
fs/apps/gst-tracelib-0.2/: Makefile
fs/apps/gst-tracelib-0.2/src/: AUTHORS  ChangeLog  Makefile.am  Makefile.in  NEWS  README  TODO  autogen.sh  config.h.in  configure  configure.ac
fs/apps/gst-tracelib-0.2/src/autom4te.cache/: output.0  output.1  requests  traces.0  traces.1
fs/apps/gst-tracelib-0.2/src/src/: Makefile.am  Makefile.in  gsttl.in  gsttl_plot.sh  gsttl_splitlog.py  gsttracelib.c
fs/apps/openssl-1.0.0.c/: Makefile
installer/mmapgen/: Makefile  Makefile.board
installer/openfd/: Config  Makefile
kernel/: Makefile
proprietary/ezsdk-5_05_02_00/: Config  Makefile  coprocessors.init.in
proprietary/gst-openmax-dm81xx/: Makefile
proprietary/gst-rr-rtsp-sink/: Config  Makefile
(+91 files in other folders)
